# national-defense-hackathon

./: .gitignore  README.md  environment.yaml  pyproject.toml  tasks.md
docs/: CONTRIBUTING.md  RUNBOOK.md
object-detection/: scene.py
object-detection/calibration/: README.md  USAGE.md  calibration.py  estimate_relative_pose.py  make_inspection.py  multi_view.py  test.py
object-detection/calibration/tests/: test_multi_view.py
object-detection/pipeline/: build_world_frame.py  debug_sync.py  intrinsics.py  motion_extraction.py  render_3d_video.py  render_consensus_overlay.py  render_motion_video.py  render_sync_grid.py  run_pipeline.py  viewer.py
object-detection/raycasting/: README.md  calibration.py  description.md  math_utils.py  raycaster.py
object-detection/tests/: test_calibration_consistency.py  test_pipeline.py
object-detection/tests/temp_out/: pose.json
references/: README.md
references/homographies/code/: README.txt  main.py  test.py
references/homographies/code/correspondances/: board.json  box_1_box_2.json  elevator_1_elevator_2.json  great_hall_1_great_hall_2.json  great_hall_2_great_hall_3.json  stairs_1_stairs_2.json  stairs_1_stairs_2_old.json  window.json
references/homographies/web/: sites.txt
