[project]
name = "national-defense-hackathon"
version = "0.1.0"
description = "Multi-camera aerial object detection via raycasting and voxel aggregation."
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "opencv-python>=4.9",
    "Pillow>=10.0",
    "open3d>=0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 110
target-version = "py312"
